Layout issue fixes for enom pro.

--- a/src/modules/addons/enom_pro/css/admin.less
+++ b/src/modules/addons/enom_pro/css/admin.less
@@ -1037,19 +1037,6 @@ Top level DOM items
 	border: none;
 }
 
-//WHMCS V6 Tweaks
-
-.contentarea {
-	.enom_pro_output {
-		min-height: 600px;
-	}
-	.widget-content {
-		.enom_pro_output {
-			min-height: inherit;
-		}
-	}
-}
-
 /**Swiftmods admin tweaks */
 .content-container {
 	overflow: auto;
